--- a/client/auth.css
+++ b/client/auth.css
@@ -40,10 +40,13 @@
 	width:100%; 
 	margin:0 auto; /* center your carousel if other than 100% */ 
 	height:500px;
-	background:url('/back6.jpg') center center;
-	background-size: cover;
 	color: white;
 	position: relative;
+}
+
+#back-image{
+	background:url('/back6.jpg') center center;
+	background-size: cover;
 }
 
 .text-jumbo {
@@ -69,6 +72,27 @@
 	position: absolute;
 	padding: 30px;
 	background: rgba(0,0,0,0.6);
+	margin-left: 0px;
+	font-size: 0;
+}
+
+.search-form .form-control, .search-form button{
+	border-radius: 1px;
+	outline: none;
+	border-color:none !important;
+	font-weight: 800;
+	height: 4rem;
+}
+
+.input :focus{
+	outline: none;
+	border-color: none;
+	-webkit-box-shadow: none;
+	box-shadow: none;
+}
+
+.search-form .control-width{
+	width: 12rem;
 }
 
 /*
